fix: shtimi i artikujve

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <a href="#"><img src="img/logo.png" alt="" width="32px"></a>
             <div class="rightmenu">
                 
-                <a href="home.html">Home</a>
-                <a href="news.html">News</a>
+                <a href="#Home">Home</a>
+                <a href="#News">News</a>
                 <a href="contact.html">Contact</a>
                 <select name="" id="">
                     <option value="all">All</option>
@@ -35,6 +35,26 @@
         <div class="search">
             <input type="text"placeholer="Search...">
             <button type="submit">Search</button>
+
+        </div>
+        <div class="artikujt" id="News">
+            <h1>Lajmet me te reja</h1>
+            <article>
+                <img src="img/albin-kurti.png" alt="" width="333px">
+                <h3>Qeveria Kurti nuk u miratua serisht</h3>
+                <p>3/11/2025 prej Filan Fistekut</p>
+            </article>
+            <article>
+                <img src="img/albin-kurti.png" alt="" width="333px">
+                <h3>Qeveria Kurti nuk u miratua serisht</h3>
+                <p>3/11/2025 prej Filan Fiatekut</p>
+            </article>
+            <article>
+                <img src="img/albin-kurti.png" alt="" width="333px">
+                <h3>Qeveria Kurti nuk u miratua serisht</h3>
+                <p>3/11/2025 prej Filan Fistekut</p>
+            </article>
+
 
         </div>
     </div>
