--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 
                 <a href="#Home">Home</a>
                 <a href="#News">News</a>
-                <a href="contact.html">Contact</a>
+                <a href="#Contact">Contact </a>
                 <select name="" id="">
                     <option value="all">All</option>
                     <option value="Prishtina">Prishtina</option>
@@ -35,7 +35,13 @@
         <div class="search">
             <input type="text"placeholer="Search...">
             <button type="submit">Search</button>
-
+<aside>
+    <h2> Related Article</h2>
+    <article>
+        <h3>Article Title</h3>
+        <p>Article summary goes here.</p>
+    </article>
+</aside>
         </div>
         <div class="artikujt" id="News">
             <h1>Lajmet me te reja</h1>
@@ -47,7 +53,7 @@
             <article>
                 <img src="img/albin-kurti.png" alt="" width="333px">
                 <h3>Qeveria Kurti nuk u miratua serisht</h3>
-                <p>3/11/2025 prej Filan Fiatekut</p>
+                <p>3/11/2025 prej Filan Fistekut</p>
             </article>
             <article>
                 <img src="img/albin-kurti.png" alt="" width="333px">
@@ -57,6 +63,13 @@
 
 
         </div>
+
+        <footer id="#Contact >
+            <a href="https://www.instagram.com" target="_blank"> Instagram</a>
+            <a href="https://www.facebook.com" target="_blank"> Facebook</a>
+            <a href="https://www.twitter.com" target="_blank">Twitter</a>
+            <p> 2025 Blog Page. All rights reserved.</p>
+        </footer>
     </div>
 </body>
 </html>
